package com.guiabrete.model;

public enum Categoria {
    ELECTRICIDAD,
    FONTANERIA,
    CARPINTERIA,
    HERRERIA,
    REPARACIONES,
    PINTURA,
    LIMPIEZA,
    JARDINERIA,
    MECANICA,
    FUMIGACION,
    MENSAJERIA,
    DELIVERY,
    MUDANZA,
    CLASES,
    TUTORIA,
    IDIOMAS,
    COMPUTACION,
    DISENIO,
    FOTOGRAFIA,
    CUIDADO_NINOS,
    CUIDADO_ADULTOS,
    ENFERMERIA,
    PELUQUERIA,
    BARBERIA,
    MANICURA,
    MAQUILLAJE,
    CONTABILIDAD,
    ARQUITECTURA,
    OTROS
}
