@startuml
skinparam classAttributeIconSize 0

' ===========================
'       EXCEPCIONES
' ===========================
class GuiaBreteException <<Exception>>
class ContactoInvalidoException
class DatosIncompletosException
class EmailInvalidoException
class UsuarioDuplicadoException

GuiaBreteException <|--- ContactoInvalidoException
GuiaBreteException <|--- DatosIncompletosException
GuiaBreteException <|--- EmailInvalidoException
GuiaBreteException <|--- UsuarioDuplicadoException

' ===========================
'       ENUM
' ===========================
enum Categoria {
  ELECTRICIDAD, FONTANERIA, CARPINTERIA, HERRERIA,
  REPARACIONES, PINTURA, LIMPIEZA, JARDINERIA,
  MECANICA, FUMIGACION, MENSAJERIA, DELIVERY,
  MUDANZA, CLASES, TUTORIA, IDIOMAS, COMPUTACION,
  DISENIO, FOTOGRAFIA, CUIDADO_NINOS, CUIDADO_ADULTOS,
  ENFERMERIA, PELUQUERIA, BARBERIA, MANICURA,
  MAQUILLAJE, CONTABILIDAD, ARQUITECTURA, OTROS
}

' ===========================
'       CLASES DEL MODELO
' ===========================
class Usuario {
  - idUsuario : int
  - nombre : String
  - telefono : String
  - email : String
  - contrasenia : String
}

class Proveedor {
  - zona : String
  - horario : String
}

class Visitante {
}

class Servicio {
  - idServ : int
  - nombreServ : String
  - categoria : Categoria
  - descripcionServ : String
  - zona : String
  - horario : String
  - contacto : String
}

' ===========================
'     REPOSITORIOS (SINGLETON)
' ===========================
class RepositorioUsuarios <<Singleton>> {
  - visitantes : List<Visitante>
  - proveedores : List<Proveedor>
  - siguienteIdUsuario : int
  + {static} getInstance() : RepositorioUsuarios
  + anadirVisitante(v : Visitante)
  + anadirProveedor(p : Proveedor)
  + modificarUsuario(u : Usuario)
  + buscarProveedorPorEmailYClave(email : String, clave : String) : Proveedor
  + buscarVisitantePorEmailYClave(email : String, clave : String) : Visitante
  + buscarProveedorPorId(id : int) : Proveedor
}

class RepositorioServicios <<Singleton>> {
  - servicios : List<Servicio>
  - siguienteIdServ : int
  + {static} getInstance() : RepositorioServicios
  + agregarServ(s : Servicio)
  + buscarPorZona(zona : String) : List<Servicio>
  + buscarPorCategoria(categoria : Categoria) : List<Servicio>
  + buscarPorTexto(texto : String) : List<Servicio>
  + editarServicio(s : Servicio)
  + eliminarServicio(s : Servicio)
  + obtenerTodos() : List<Servicio>
}

' ===========================
'   PERSISTENCIA (SINGLETON)
' ===========================
class PersistenciaArchivo <<Singleton>> {
  - carpeta : File
  - usuarios : File
  - servicios : File
  + {static} getInstance() : PersistenciaArchivo
  + cargarUsuarios(repo : RepositorioUsuarios)
  + guardarUsuarios(repo : RepositorioUsuarios)
  + cargarServicios(repoServ : RepositorioServicios, repoUsu : RepositorioUsuarios)
  + guardarServicios(repoServ : RepositorioServicios)
}

' ===========================
'       CONTROLADOR
' ===========================
class ControladorApp {
  - usuarioLogueado : Usuario
  + iniciar()
  + registrarVisitante(...)
  + registrarProveedor(...)
  + iniciarSesionProveedor(...)
  + iniciarSesionVisitante(...)
  + cerrarSesion()
  + anadirServicio(...)
  + modificarServicio(...)
  + eliminarServicio(...)
  + mostrarCatalogoCompleto()
  + buscarPorZona(...)
  + buscarPorCategoria(...)
  + buscarPorTexto(...)
}

' ===========================
'        VISTAS PRINCIPALES
' ===========================
class MainVista {
  + cambiarVista(nombreVista : String)
  + mostrarPanelVisitante(...)
  + mostrarDetalleServicio(...)
  + mostrarPanelProveedor(...)
  + mostrarPerfilProveedor(...)
}
' ===========================
'     RELACIONES
' ===========================
Usuario <|-- Proveedor
Usuario <|-- Visitante

Servicio "0..*" --> "1" Proveedor : pertenece a >
Servicio --> Categoria

RepositorioUsuarios "1" o-- "*" Usuario
RepositorioServicios "1" o-- "*" Servicio

ControladorApp --> RepositorioUsuarios
ControladorApp --> RepositorioServicios
ControladorApp --> PersistenciaArchivo
ControladorApp --> MainVista
ControladorApp --> GuiaBreteException

@enduml